# mkdocs-python-ref-generator

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: release.yml
docs/: index.md  usage.md
mkdocs_py_ref_gen/: __init__.py  cli.py  generator.py  plugin.py
mykdocs_py_ref_gen/: generator.py
search/: search_index.json
tests/: mkdocs.yml  test_generator.py  test_module.py
usage/: index.html
