[tool.poetry]
name = "mkdocs-py-ref-gen"
version = "0.1.1"
description = "mkdocs plugin to generate reference documentation and summary of python package(s)"
license = "MIT"
documentation = "https://leninkhaidem.github.io/mkdocs-python-ref-generator/"
repository = "https://github.com/leninkhaidem/mkdocs-python-ref-generator"
authors = ["Lenin Khaidem <leninkhaidem@gmail.com>"]
readme = "README.md"
keywords = ["mkdocs", "mkdocs-plugin", "docstrings", "autodoc", "documentation","mkdocstrings[python]","python"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
click = "^8.1.7"
mkdocs-section-index = "^0.3.9"

[tool.poetry.scripts]
py-ref-gen = "mkdocs_py_ref_gen.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
coverage = "^7.6.4"
python-semantic-release = "^9.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
py-ref-gen = "mkdocs_py_ref_gen.plugin:MkDocsPyRefGenPlugin"

[tool.semantic_release]
assets = []
build_command_env = []
commit_message = "chore(release): {version} [skip ci]"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
no_git_verify = false
tag_format = "v{version}"
build_command = "rm -rf dist/* && pip install poetry && poetry build"
version_variables = ["mkdocs_py_ref_gen/__init__.py:__version__"]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false


[tool.semantic_release.changelog]
exclude_commit_patterns = []
mode = "init"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[semantic_release.remote.token]
env = "GH_TOKEN"